--- a/bhoma/apps/chw/templates/chw/single_chw.html
+++ b/bhoma/apps/chw/templates/chw/single_chw.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<h3>{{ chw.first_name }} {{ chw.last_name }} @ {{ chw.current_clinic_display }}</h3>
+<h3>{{ chw.first_name }} {{ chw.last_name }} @ {{ chw.current_clinic_display }} (Zone {{ chw.current_clinic_zone|default:"NONE" }})</h3>
 <h4><p>Your CommCare username is: <b>{{ chw.user.username|default:"NOT SET" }}</b></p></h4>
 <p><a href="{% url sofa chw.get_id %}">view in sofa (DEBUG)</a></p> 
 {% endblock %}
