--- a/bhoma/apps/webapp/templates/landing_page.html
+++ b/bhoma/apps/webapp/templates/landing_page.html
@@ -23,5 +23,16 @@ BHOMA Main Menu
         </tbody>
     </table>
 </div>
+{% if user.is_superuser %}
+<div class="really-big-button" onclick="location.href='{% url bhoma_admin %}'">
+    <table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%">
+        <tbody>
+            <tr>
+                <td align="center" valign="middle">Administration</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+{% endif %}
 </center>
 {% endblock %}
