finish new user flow from clinic

--- a/bhoma/apps/webapp/templates/auth/user_reg_complete.html
+++ b/bhoma/apps/webapp/templates/auth/user_reg_complete.html
@@ -1,16 +1,17 @@
 {% extends "touchscreen/wrapper-raw.html" %}
 {% block header %}
-BHOMA Administration Menu
+User {{ new_user.username }} created!
 {% endblock %}
 {% block touchscreen_content %}
+
 {% if user.is_superuser %}
-<h4>What would you like to do?</h4>
+<h4>What would you like to do next?</h4>
 <center>
-<div class="really-big-button" onclick="location.href='{% url new_user %}'">
+<div class="really-big-button" onclick="location.href='{% url bhoma_admin %}'">
 	<table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%">
 	    <tbody>
 	        <tr>
-	            <td align="center" valign="middle">Create a New Clinic User</td>
+	            <td align="center" valign="middle">Back to admin</td>
 	        </tr>
 	    </tbody>
 	</table>
