--- a/bhoma/apps/webapp/templates/admin.html
+++ b/bhoma/apps/webapp/templates/admin.html
@@ -1,4 +1,5 @@
 {% extends "touchscreen/wrapper-raw.html" %}
+{% load touchscreen_tags %}
 {% block header %}
 BHOMA Administration Menu
 {% endblock %}
@@ -6,15 +7,8 @@ BHOMA Administration Menu
 {% if user.is_superuser %}
 <h4>What would you like to do?</h4>
 <center>
-<div class="really-big-button" onclick="location.href='{% url new_user %}'">
-	<table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%">
-	    <tbody>
-	        <tr>
-	            <td align="center" valign="middle">Create a New Clinic User</td>
-	        </tr>
-	    </tbody>
-	</table>
-</div>
+{% url new_user as new_user_url %}
+{% ts_button "Create a New Clinic User" new_user_url %}
 </center>
 {% else %}
 <center>
