--- a/bhoma/apps/webapp/templates/touchscreen/wrapper-raw.html
+++ b/bhoma/apps/webapp/templates/touchscreen/wrapper-raw.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
@@ -5,7 +6,12 @@
     <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/touchscreen.css" type="text/css" >
 {% block page_head %}{% endblock %}    
   </head>
-<body>
+<body id="body" style="
+    cursor: crosshair; /* change cursor */
+    overflow: hidden;  /* disable scrolling */
+    font-family: sans-serif; 
+    font-size: xx-large;"
+    oncontextmenu="return false;"> <!-- disable right-click -->
     <!-- disable right-click -->
     <div id="viewport" >
         <div style="position: absolute; top: 0px; left: 0px; width: 1024px; height: 768px; background-color: rgb(0, 0, 0);" id="main">
