--- a/bhoma/apps/webapp/templates/admin.html
+++ b/bhoma/apps/webapp/templates/admin.html
@@ -8,7 +8,10 @@ BHOMA Administration Menu
 <h4>What would you like to do?</h4>
 <center>
 {% url new_user as new_user_url %}
-{% ts_button "Create a New Clinic User" new_user_url %}
+{% ts_button "Add a new clinic user" new_user_url %}
+
+{% url delete_user as del_user_url %}
+{% ts_button "Delete a clinic user" del_user_url %}
 </center>
 {% else %}
 <center>
