--- a/bhoma/apps/webapp/static/stylesheets/touchscreen.css
+++ b/bhoma/apps/webapp/static/stylesheets/touchscreen.css
@@ -105,6 +105,21 @@
     font-size: xx-large; 
 }
 
+.big-button-disabled {
+    width: 400px; 
+    height: 64px;
+    -moz-border-radius: 10px 10px 10px 10px;
+    margin: 15px;
+    background-color: #ddddee;
+
+}
+.big-button-disabled td {
+    font-weight: bold;
+    text-align: center;  
+    color: rgb(255, 255, 255);   
+    font-size: xx-large; 
+}
+
 
 #back-button {
     position: absolute; 
