--- a/bhoma/apps/reports/templates/reports/report_list.html
+++ b/bhoma/apps/reports/templates/reports/report_list.html
@@ -6,7 +6,7 @@
 	    <li><a href="#">Appointment List (TODO)</a></li>
 	    <li><a href="{% url unrecorded_referral_list %}">Open Case List</a></li>
 	    <li><a href="#">HMIS Report (TODO)</a></li>
-	    <li><a href="#">Enter NCH Community Register (TODO)</a></li>
+	    <li><a href="{% url mortality_register %}">Enter NHC Community Register</a></li>
 	</ul>
 </div>
 <div class="span-12 last">
