--- a/bhoma/apps/patient/templates/patient/single_patient_touchscreen.html
+++ b/bhoma/apps/patient/templates/patient/single_patient_touchscreen.html
@@ -8,22 +8,13 @@
 <div class="container" style="font-size: 50%;">
 <div id="patient-summary" class="span-13">
 {% include "patient/partials/single_patient_summary.html" %}
-{% for xform in xforms %}
-    {% if forloop.first %}
-<h3>Linked Data</h3>
-<ul>
-    {% endif %}
-    <li><a href="{% url sofa xform.get_id %}">{{ xform.type }}</a> ({{ xform.namespace }})</li>
-    {% if forloop.last %} 
-</ul>
-    {% endif %}
-{% endfor %}
 <h3>Recent Visits</h3>
 {% include "encounter/partials/encounter_list.html" %}
 </div>
 <div class="span-10 last">
 {% include "patient/partials/encounter_choice_list.html" %}
 <a href="{% url sofa patient.get_id %}">view in sofa (DEBUG)</a> 
+<a href="{% url export_patient patient.get_id %}">export patient (DEBUG)</a> 
 </div>
 </div>
 
