add example flot chart to the reports

--- a/bhoma/apps/reports/templates/reports/couch_report.html
+++ b/bhoma/apps/reports/templates/reports/couch_report.html
@@ -2,4 +2,5 @@
 {% block reportcontent %}
 {% load report_tags %}
 {% render_report report %}
+{% include "reports/partials/report_graph.html" %}
 {% endblock %}
