--- a/bhoma/apps/reports/templates/reports/report_base.html
+++ b/bhoma/apps/reports/templates/reports/report_base.html
@@ -9,6 +9,7 @@
 {% endblock %}
 {% block page_javascripts %}
     <script type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/jquery-ui-1.8.2.custom.min.js"></script>
+    <script type="text/javascript" src="{{MEDIA_URL}}reports/javascripts/flot/jquery.flot.min.js"></script>
     <script type="text/javascript">
 		$(function() {
 		    $('.date-picker').datepicker( {
