--- a/bhoma/apps/patient/templates/patient/single_patient_touchscreen.html
+++ b/bhoma/apps/patient/templates/patient/single_patient_touchscreen.html
@@ -13,8 +13,14 @@
 </div>
 <div class="span-10 last">
 {% include "patient/partials/encounter_choice_list.html" %}
-<a href="{% url sofa patient.get_id %}">view in sofa (DEBUG)</a> 
-<a href="{% url export_patient patient.get_id %}">export patient (DEBUG)</a> 
+{% if debug %}
+<h4>Debug Tools</h4>
+<ul style="list-style: None; padding-left: 0px;">
+    <li><a href="{% url sofa patient.get_id %}">view patient in sofa</a></li> 
+    <li><a href="{% url export_patient patient.get_id %}">export patient to file</a></li> 
+    <li><a href="{% url regenerate_patient_data patient.get_id %}">regenerate encounter/case data</a></li> 
+</ul>
+{% endif %}
 </div>
 </div>
 
