temp commit while working on graphs for reports

--- a/bhoma/apps/reports/templates/reports/couch_report.html
+++ b/bhoma/apps/reports/templates/reports/couch_report.html
@@ -2,5 +2,5 @@
 {% block reportcontent %}
 {% load report_tags %}
 {% render_report report %}
-{% include "reports/partials/report_graph.html" %}
+{% render_graph report %}
 {% endblock %}
