--- a/bhoma/apps/webapp/templates/touchscreen/button.html
+++ b/bhoma/apps/webapp/templates/touchscreen/button.html
@@ -1,8 +1,8 @@
-<div class="{{ class }}" onclick="location.href='{{ url }}'">
+<div class="{{ class }}" onclick="location.href='{{ url }}'" >
     <table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%">
         <tbody>
             <tr>
-                <td align="center" valign="middle">{{ text }}</td>
+                <td align="center" valign="middle" style="{{custom_style}}">{{ text }}</td>
             </tr>
         </tbody>
     </table>
