--- a/bhoma/apps/reports/templates/reports/report_list_ts.html
+++ b/bhoma/apps/reports/templates/reports/report_list_ts.html
@@ -13,7 +13,7 @@ Report List
     {% ts_button "Appointment List (TODO)" "#" "big-button" "font-size:x-large"%}
 	{% url unrecorded_referral_list  as ref_list_url %}
 	{% ts_button "Open Case List" ref_list_url "big-button" "font-size:x-large"%}
-    {% ts_button "HMIS Report (TODO)" "#" "big-button" "font-size:x-large"%}
+    {# no more HMIS report (at least for pilot {% ts_button "HMIS Report (TODO)" "#" "big-button" "font-size:x-large"%} #}
     {% url mortality_register as mr_url %}
     {% ts_button "Enter NHC Community Register" mr_url "big-button" "font-size:x-large"%}
 </div>
