add rudimentary clinic prefixing to patient id

--- a/bhoma/apps/xforms/templates/xforms/touchscreen.html
+++ b/bhoma/apps/xforms/templates/xforms/touchscreen.html
@@ -17,6 +17,8 @@ XFORM_URL = "{% url xform_player_proxy %}";
 XFORM_NAME = "{{form.name}}";
 XFORM_UID = null;
 
+CLINIC_PREFIX = '502028';
+
 autoAdvance = true;
 
 function init () {
