--- a/bhoma/apps/encounter/templates/encounter/partials/encounter_list.html
+++ b/bhoma/apps/encounter/templates/encounter/partials/encounter_list.html
@@ -11,8 +11,11 @@
     {% endif %}
     {% if forloop.counter < 10 %}
         <tr>
-            <td><a href="{% url sofa encounter.xform_id %}">{{ encounter.visit_date|date:"d M Y"|default:"No date found" }}</a></td>
-            <td>{{ encounter.display_type }}</td>
+            <td>{% if debug %}<a href="{% url sofa encounter.xform_id %}">{% endif %}
+                {{ encounter.visit_date|date:"d M Y"|default:"No date found" }}
+                {% if debug %}</a>{% endif %}
+            </td>
+            <td><a href="{% url single_encounter patient.get_id encounter.get_id %}">{{ encounter.display_type }}</a></td>
             <td>{{ encounter.dynamic_data.case.closed|yesno:"closed,open"}} {% if encounter.dynamic_data.case.outcome %} ({{ encounter.dynamic_data.case.formatted_outcome }}) {% endif %}</td>
         </tr>
     {% endif %}
