--- a/bhoma/apps/webapp/static/stylesheets/touchscreen.css
+++ b/bhoma/apps/webapp/static/stylesheets/touchscreen.css
@@ -33,12 +33,15 @@
 
 #help-button {
     position: absolute; 
+    cursor: pointer;
     top: 0px; 
     left: 934px; 
     width: 50px; 
     height: 44px; 
     background-color: rgb(170, 170, 170); 
-    -moz-border-radius: 10px 10px 10px 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
 }
 
 #footer {
@@ -63,7 +66,9 @@
     width: 150px; 
     height: 64px;
     cursor: pointer;
-    -moz-border-radius: 10px 10px 10px 10px;  
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;  
 }
 
 .footer-button td {
@@ -77,7 +82,9 @@
     width: 550px; 
     height: 128px;
     cursor: pointer;
-    -moz-border-radius: 10px 10px 10px 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
     margin: 30px;
     background-color: rgb(17, 17, 136);
 
@@ -93,7 +100,9 @@
     width: 400px; 
     height: 64px;
     cursor: pointer;
-    -moz-border-radius: 10px 10px 10px 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
     margin: 15px;
     background-color: rgb(17, 17, 136);
 
@@ -108,7 +117,9 @@
 .big-button-disabled {
     width: 400px; 
     height: 64px;
-    -moz-border-radius: 10px 10px 10px 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
     margin: 15px;
     background-color: #ddddee;
 
@@ -149,7 +160,9 @@
     background-color: rgb(170, 187, 221);
     width: 500px; 
     height: 64px;
-    -moz-border-radius: 10px 10px 10px 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
     font-weight: bold; 
     color: rgb(255, 255, 255);
 }
