--- a/bhoma/apps/webapp/static/stylesheets/scrolling.css
+++ b/bhoma/apps/webapp/static/stylesheets/scrolling.css
@@ -17,14 +17,13 @@
 .ui-slider-vertical {
 	width: 42px;
 	border: 1px solid gray;
-	height:514px; 
+	height:544px; 
 	float: right; 
-	margin-top: 30px;
+	margin-top: 4px;
 	margin-right: 6px;
 }
 
-.ui-slider-vertical .ui-state-default {
-    height: 40px;
+.ui-slider-vertical .ui-slider-handle {
     width: 50px;
-    background-color: #aabbdd;
 }
+
