--- a/bhoma/apps/reports/templates/reports/report_list_ts.html
+++ b/bhoma/apps/reports/templates/reports/report_list_ts.html
@@ -5,7 +5,7 @@ Report List
 {% endblock %}
 {% block touchscreen_content %}
 <br></br>
-<div class="container" style="font-size: 50%;">
+<div class="container" style="font-size: 40%;">
 <div class="span-12">
 	<h2>Clinic Management</h2>
 	{% url clinic_summary_report as sum_url %}
@@ -15,7 +15,7 @@ Report List
 	{% ts_button "Open Case List" ref_list_url "big-button" "font-size:x-large"%}
     {# no more HMIS report (at least for pilot {% ts_button "HMIS Report (TODO)" "#" "big-button" "font-size:x-large"%} #}
     {% url mortality_register as mr_url %}
-    {% ts_button "Enter NHC Community Register" mr_url "big-button" "font-size:x-large"%}
+    {% ts_button "Enter NHC Community Register" mr_url "big-button" "font-size:170%"%}
 </div>
 <div class="span-12 last">
     <h2>Performance Indicator Reports</h2>
