Add "login from touchscreen" url.

--- a/bhoma/apps/webapp/templates/auth/login.html
+++ b/bhoma/apps/webapp/templates/auth/login.html
@@ -21,6 +21,7 @@
     </form>
     <br>
 </div>
+<p><a href="{% url touchscreen_login %}">Login from a touchscreen.</a></p>
 {% endif %}
 {% endblock %}
 
