--- a/bhoma/apps/webapp/templates/footer.html
+++ b/bhoma/apps/webapp/templates/footer.html
@@ -1,5 +1,13 @@
 <div id="footer">
     <div class="container">
-    <h4>Footer</h4>
+        <div class="span-12">
+            <br></br>
+        </div>
+        <div class="span-12 last">
+            <p style="text-align:right">
+                BHOMA: Better Health Outcomes | Copyright &copy; 2010
+                <b>CIDRZ</b> and <b>Dimagi</b>
+            </p>
+        </div>
     </div><!-- End Container Class -->
 </div>
