even better footer!  (and removing Dimagi)

--- a/bhoma/apps/webapp/static/stylesheets/bhoma.css
+++ b/bhoma/apps/webapp/static/stylesheets/bhoma.css
@@ -1,3 +1,9 @@
 #inner {
     min-height: 100px
 }
+
+#footer .container {
+	margin-top: 10px;
+	padding-top: 10px;
+    border-top: 2px solid #eeeeff;
+}
