--- a/bhoma/apps/webapp/templates/footer.html
+++ b/bhoma/apps/webapp/templates/footer.html
@@ -5,8 +5,7 @@
         </div>
         <div class="span-12 last">
             <p style="text-align:right">
-                BHOMA: Better Health Outcomes | Copyright &copy; 2010
-                <b>CIDRZ</b> and <b>Dimagi</b>
+                <b>BHOMA</b>&nbsp;&nbsp;Better Health Outcomes for Zambia | Copyright &copy; 2010 <b>CIDRZ</b>
             </p>
         </div>
     </div><!-- End Container Class -->
