fix clinic prefixing back to 6 digits

--- a/bhoma/apps/xforms/templates/xforms/touchscreen.html
+++ b/bhoma/apps/xforms/templates/xforms/touchscreen.html
@@ -17,7 +17,7 @@ XFORM_URL = "{% url xform_player_proxy %}";
 XFORM_NAME = "{{form.name}}";
 XFORM_UID = null;
 
-CLINIC_PREFIX = {{ clinic.slug }};
+CLINIC_PREFIX = {{ clinic.prefix }};
 
 autoAdvance = true;
 
