--- a/bhoma/apps/webapp/static/stylesheets/touchscreen.css
+++ b/bhoma/apps/webapp/static/stylesheets/touchscreen.css
@@ -176,3 +176,15 @@
 .touchscreen th {
     background-color: inherit;
 }
+
+.phone {
+    background-image:url('silk/phone.png');
+    background-repeat:no-repeat;
+    background-position:center center;
+}
+
+.clinic {
+    background-image:url('silk/monitor.png');
+    background-repeat:no-repeat;
+    background-position:center;
+}
