add 'N/A' options to chw zone question; make # zones (kinda) variable by clinic

--- a/bhoma/apps/xforms/templates/xforms/touchscreen.html
+++ b/bhoma/apps/xforms/templates/xforms/touchscreen.html
@@ -18,6 +18,7 @@ XFORM_NAME = "{{form.name}}";
 XFORM_UID = null;
 
 CLINIC_PREFIX = {{ clinic.prefix }};
+CLINIC_NUM_CHW_ZONES = 6; //templatize me
 
 autoAdvance = true;
 
