--- a/bhoma/apps/patient/templates/patient/partials/single_patient_summary.html
+++ b/bhoma/apps/patient/templates/patient/partials/single_patient_summary.html
@@ -3,7 +3,12 @@
     <tr><td>Sex:&nbsp;&nbsp;</td><td><b>{% if patient.gender %}{% ifequal patient.gender 'm' %}Male{% else %}Female{% endifequal %}{% else %}??{% endif %}</b></td></tr>
     <tr><td>Birthdate:&nbsp;&nbsp;</td><td><b>{{ patient.birthdate|date:"d M Y"|default:"??" }} {% if patient.birthdate_estimated %}(est){% endif %}</b></td></tr>
     <tr><td>Age:&nbsp;&nbsp;</td><td><b>{{ patient.formatted_age|default:"??" }}</b></td></tr>
-    <tr><td>Village:&nbsp;&nbsp;</td><td><b>{{ patient.address.village|default:"&#x2014;" }} {% if patient.address.zone %}(zone {{ patient.address.zone }}){% endif %}</b></td></tr>
+    <tr><td>Village:&nbsp;&nbsp;</td><td><b>{{ patient.address.village|default:"&#x2014;" }} 
+                                                {% if patient.address.zone %}(zone {{ patient.address.zone }})
+                                                {% else %}{% if patient.address.zone_empty_reason %}
+                                                          ({{ patient.address.zone_empty_reason_display }})
+                                                          {% endif %}
+                                                {% endif %}</b></td></tr>
     <tr><td>Contact:&nbsp;&nbsp;</td><td><b>{{ patient.default_phone|default:"&#x2014;" }}</b></td></tr>
   </table>
 </div>
