--- a/bhoma/apps/webapp/static/stylesheets/bhoma.css
+++ b/bhoma/apps/webapp/static/stylesheets/bhoma.css
@@ -7,3 +7,8 @@
 	padding-top: 10px;
     border-top: 2px solid #eeeeff;
 }
+
+tr td.namespace{
+    background-color: #fff;
+    border-bottom: 1px solid #cccccc;
+}
