make the excel download a url param instead of in the url

--- a/bhoma/apps/xforms/templates/xforms/xform_list.html
+++ b/bhoma/apps/xforms/templates/xforms/xform_list.html
@@ -20,7 +20,7 @@
             <!--td>{{ xform.name }}</td-->
             {% if forloop.first %}
                 <td class="namespace" rowspan="{{ xforms|length }}">
-                    [<a href="{% url xform_download_excel namespace %}">excel</a>]
+                    [<a href="{% url xform_download_excel %}?xmlns={{namespace}}">excel</a>]
                     {{ namespace }}
                 </td>
             {% endif %}
