--- a/bhoma/apps/patient/templates/patient/export_data.html
+++ b/bhoma/apps/patient/templates/patient/export_data.html
@@ -6,6 +6,10 @@
     <li style="padding-top:10px; padding-bottom:10px">
         <b><a href="{% url export_all_data %}">All forms (zip file)</a></b>
     </li>
+    <li style="padding-top:10px">
+        <a href="{% url model_download_excel %}?model=CPatient">patient (registration and case) data</a>
+    </li>
+    
 {% for xmlns, encounter_info in encounters.items %}
     <li style="padding-top:10px">
         <a href="{% url xform_download_excel %}?xmlns={{xmlns}}">{{ encounter_info.name }}</a>
