--- a/bhoma/apps/webapp/static/stylesheets/bhoma.css
+++ b/bhoma/apps/webapp/static/stylesheets/bhoma.css
@@ -2,6 +2,12 @@
     min-height: 100px
 }
 
+#header .container h1 {
+    background: url("../images/logo_cidrz.gif")  no-repeat; 
+    min-height: 56px;
+    margin: 5px;
+    text-indent:-9999px;
+}
 #footer .container {
 	margin-top: 10px;
 	padding-top: 10px;
