--- a/bhoma/apps/webapp/templates/header.html
+++ b/bhoma/apps/webapp/templates/header.html
@@ -1,7 +1,7 @@
 <div id="header">
     <div class="container">
         <div class="span-12">
-            <h1><a href="/">BHOMA</a></h1>
+            <a href="/"><h1>BHOMA</h1></a>
 		</div>
         <div class="span-12 last" style="text-align:right">
             {% if user.is_authenticated %}        
