--- a/bhoma/apps/reports/templates/reports/report_list_ts.html
+++ b/bhoma/apps/reports/templates/reports/report_list_ts.html
@@ -10,7 +10,9 @@ Report List
 		<h2>Clinic Management</h2>
 		{% url clinic_summary_report as sum_url %}
 	    {% ts_button "Clinic Summary Report" sum_url "big-button" "font-size:x-large"%}
-	    {% ts_button "Appointment List (TODO)" "#" "big-button" "font-size:x-large"%}
+	    {% url user_summary_report as user_url %}
+        {% ts_button "User/CHW Summary Report" user_url "big-button" "font-size:x-large"%}
+        {% ts_button "Appointment List (TODO)" "#" "big-button" "font-size:x-large"%}
 		{% url unrecorded_referral_list  as ref_list_url %}
 		{% ts_button "Open Case List" ref_list_url "big-button" "font-size:x-large"%}
 	    {# no more HMIS report (at least for pilot {% ts_button "HMIS Report (TODO)" "#" "big-button" "font-size:x-large"%} #}
