--- a/bhoma/apps/reports/templates/reports/user_summary.html
+++ b/bhoma/apps/reports/templates/reports/user_summary.html
@@ -1,7 +1,25 @@
 {% extends "reports/report_base.html" %}
+{% block page_stylesheets %}
+    {{ block.super }}
+    <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/tablesorter/style.css" type="text/css">
+    <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/tablesorter/pager/jquery.tablesorter.pager.css" type="text/css">
+{% endblock %}
+{% block page_javascripts %}
+    {{ block.super }}
+    <script type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/jquery.tablesorter.min.js"></script>
+    <script type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/jquery.tablesorter.pager.js"></script>
+    <script type="text/javascript">
+    $(document).ready(function() { 
+        $("table") 
+            .tablesorter({widthFixed: true, widgets: ['zebra']}) 
+            .tablesorterPager({container: $("#pager"), positionFixed: false}); 
+    }); 
+    </script>
+{% endblock %}
 {% load report_tags %}
 {% block reportcontent %}
-<table>
+{% include "pager.html" %}
+<table class="tablesorter">
     <thead>
         <tr>
             <th>Username</th>
